--- a/client/css/main.css
+++ b/client/css/main.css
@@ -7052,7 +7052,7 @@ font-family: 'Lora', serif;
 
 @media (max-width: 690px) {
   .weather-grid {
-    margin-left: 25%;
+    margin-left: 25% !important;
   }
 
  /* .wedux-header {
